src/index.css
@import 'tailwindcss';

html {
   scroll-behavior: smooth;
}

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@layer base {
   body::selection {
      @apply bg-primary-700 text-white;
   }

   [data-theme='dark'] body::selection {
      @apply bg-primary-700 text-black;
   }

   /* Firefox support */
   body::-moz-selection {
      @apply bg-primary-600 text-white;
   }
}

@media (max-width: 3850px) {
   html {
      font-size: 34px;
   }
}

@media (max-width: 2570px) {
   html {
      font-size: 24px;
   }
}

@media (max-width: 2000px) {
   html {
      font-size: 15px;
   }
}

@media (max-width: 1024px) {
   html {
      font-size: 14px;
   }
}

@media (max-width: 650px) {
   html {
      font-size: 13px;
   }
}

@media (max-width: 450px) {
   html {
      font-size: 14px;
   }
}

@media (max-width: 390px) {
   html {
      font-size: 12px;
   }
}

button,
[role='button'] {
   cursor: pointer;
}

@custom-variant xl (@media (max-width: 1580px));
@custom-variant lg (@media (max-width: 1024px));
@custom-variant md (@media (max-width: 768px));
@custom-variant sm (@media (max-width: 640px));
@custom-variant xs (@media (max-width: 450px));
@custom-variant 2xs (@media (max-width: 390px));
@custom-variant 3xs (@media (max-width: 340px));

@font-face {
   font-family: 'stylish';
   src: url('../fonts/HoperBegin.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
}

.font-stylish {
   font-family: 'stylish', sans-serif;
}

@theme {
   --font-default: 'Poppins', sans-serif;
   --font-cyrillic: 'Inter', sans-serif;
   --font-italic: 'Playfair Display', sans-serif;

   --color-primary: #fafafa;

   --color-primary-900: #1c1c1c;
   --color-primary-800: #2b2b2b;
   --color-primary-700: #444444;
   --color-primary-600: #575757;
   --color-primary-500: #757575;
   --color-primary-400: #bcbcbc;
   --color-primary-300: #d6d6d6;
   --color-primary-200: #e8e8e8;
   --color-primary-100: #f4f4f4;
   --color-primary-50: #fafafa;

   --shadow-preview: 0 0 40px 0px #d6d6d6;
   --shadow-article: 0 0 40px 0px #f4f4f4;
}

@layer base {
   [data-theme='dark'] {
      --color-primary: rgb(9, 9, 9);

      --color-primary-950: #fafafa;
      --color-primary-900: #f4f4f4;
      --color-primary-800: #e8e8e8;
      --color-primary-700: #d6d6d6;
      --color-primary-600: #bcbcbc;
      --color-primary-500: #757575;
      --color-primary-400: #575757;
      --color-primary-300: #444444;
      --color-primary-200: #2b2b2b;
      --color-primary-100: #1c1c1c;
      --color-primary-50: #101010cb;
   }
}

.underlined-text {
   text-decoration: underline;
   text-decoration-color: transparent;
   transition: 0.1s;
   text-decoration-thickness: 1.6px;
   text-underline-offset: 3px;

   -webkit-text-decoration-color: transparent;
   -moz-text-decoration-color: transparent;
}

.underlined-text:hover {
   text-decoration-color: var(--color-underline);

   -webkit-text-decoration-color: var(--color-underline);
   -moz-text-decoration-color: var(--color-underline);
}

.shadow-preview {
   @apply border border-primary-400/30 dark:border-primary-400/10 shadow-preview dark:shadow-none;
}

.shadow-article {
   @apply border border-primary-400/30 dark:border-primary-400/10 shadow-article dark:shadow-none;
}

.shadow {
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.3);
}

.shadow--sm {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
}

/* Zoom image */

.medium-zoom-overlay {
   backdrop-filter: blur(30px);
   background-color: rgba(255, 255, 255, 0.05) !important;
   transition: all 0.2s !important;
   z-index: 30;
}

[data-theme='dark'] .medium-zoom-overlay {
   backdrop-filter: blur(40px) !important;
   background-color: rgba(255, 255, 255, 0.01) !important;
}

.medium-zoom-image--opened {
   z-index: 40;
}

/* MDX Styles */

h1 {
   font-size: 3rem;
   font-weight: bold;
   line-height: 1.1;
   margin-bottom: 24px;
   margin-left: 8rem;
   margin-right: 8rem;
   text-align: center;
}

h2 {
   font-size: 2.3rem;
   font-weight: 700;
   margin: 0rem 8rem;
   margin-bottom: 10px;
}

h3 {
   color: var(--color-primary-600);
   line-height: 1.6;
   margin: 0rem 8rem;
   text-align: center;
}

p {
   color: var(--color-primary-700);
   line-height: 1.6;
   margin: 0rem 8rem;
}

.list-disc {
   color: var(--color-primary-700);
   line-height: 1.6;
   margin: 0.5rem 8rem;
}

@media (max-width: 768px) {
   h1 {
      margin-left: 4rem;
      margin-right: 4rem;
   }

   h2 {
      margin: 0.8rem 4rem;
   }

   h3 {
      margin: 0rem 4rem;
   }

   p {
      margin: 0rem 4rem;
   }

   .list-disc {
      margin: 0.5rem 4rem;
   }
}

@media (max-width: 450px) {
   h1 {
      font-size: 34px;
      margin-left: 0rem;
      margin-right: 0rem;
   }

   h2 {
      font-size: 28px;
      margin: 0.5rem 0rem;
   }

   h3 {
      margin: 0rem 0rem;
   }

   p {
      margin: 0rem 0rem;
   }

   .list-disc {
      margin: 0.5rem 0rem;
   }
}

/* Background Gradient */

@media (max-width: 3850px) {
   .background-gradient {
      background-image: radial-gradient(
            1400px 600px at 1500px 100px,
            #ffefc4d3 0px,
            transparent 55%
         ),
         radial-gradient(
            1400px 500px at 1800px 100px,
            #ff9e9e98 0px,
            transparent 55%
         ),
         radial-gradient(
            1400px 600px at 2300px 100px,
            #bea0ceaf 0px,
            transparent 55%
         ),
         radial-gradient(
            4000px 2500px at 1200px 100%,
            #ffeab5ff 0px,
            transparent 55%
         ),
         radial-gradient(
            4000px 2500px at 2200px 100%,
            #e3abffff 0px,
            transparent 55%
         ),
         radial-gradient(circle at bottom, #f5f5f5, transparent);
   }
}
/* ... */

